# Claude-Orchestrator

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  cms.md  decisions.md  phase1-completion-notes.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CLAUDE_JSON_FORMAT.md  CODE_REVIEW_REPORT.md  DEVCONTAINER_SANDBOX_PLAN.md  GITHUB_SYNC.md  IMPLEMENTATION_PLAN.md  INVESTIGATE.md  JIRA_SYNC.md  LOG_INSIGHTS.md  MANUAL_TESTPLAN.md  REFACTORING_PLAN.md  STUDY_ORCHESTRATOR_DESIGN.md  TUI_CODE_REVIEW.md  UI_LOGIC_SEPARATION_PLAN.md
docs/plans/phase3-templates/: MASTER_PLAN.md  phase-3-audit-improvements.md  phase-4-audit-improvements.md  phase-4-convert.md  phase-5-claude-runner-refactor.md  phase-6-context-monitoring.md
docs/plans/phase7-issue-planner/: MASTER_PLAN.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md
docs/plans/phase8/: MASTER_PLAN.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md
generated-plan/: MASTER_PLAN.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md
notes/: NOTES_issue_tracker_enhancements_phase_2.md  NOTES_issue_tracker_sync_phase_1.md  NOTES_issue_tracker_sync_phase_2.md  NOTES_phase3_templates_phase_1.md  NOTES_phase3_templates_phase_2.md  NOTES_phase3_templates_phase_4.md  NOTES_phase3_templates_phase_5.md  NOTES_phase3_templates_phase_6A.md  NOTES_phase3_templates_phase_6B.md  NOTES_phase3_templates_phase_6C.md  NOTES_phase3_templates_phase_6D.md  NOTES_phase7_issue_planner_phase_1.md  NOTES_phase7_issue_planner_phase_2.md  NOTES_phase7_issue_planner_phase_3.md  NOTES_phase7_issue_planner_phase_4.md  NOTES_phase_1.md  NOTES_phase_2.md  phase1-completion-notes.md  phase1_completion.md  phase1_execution_completion.md  test-sandbox-notes.md
plans/: test-sandbox-phase1.md  test-sandbox.md
plans/test-incomplete-issues/: MASTER_PLAN.md  phase-1.md  phase-2.md  phase-3.md
plans/test-incomplete-issues.archive/: MASTER_PLAN.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md
plans/test-incomplete-issues.archive2/: MASTER_PLAN.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md
plans/test-incomplete-issues.archive3/: MASTER_PLAN.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md
plans/v0.7.0/: MASTER_PLAN.md  phase-1.md  phase-2.md  phase-3.md
scripts/: capture_custom_agent.py  custom_agent_output.jsonl  investigate_task_output.py  rename_to_debussy.py  task_tool_output.jsonl  test_quality_report.py  test_simple_output.py  test_terminal_output.py
src/debussy/: __init__.py  cli.py  config.py
src/debussy/commands/: __init__.py  convert.py  init_cmd.py  plan.py  run.py  sandbox.py  sync.py
src/debussy/converters/: quality.py
src/orchestrator/: cli.py  config.py
tests/: __init__.py  test_audit.py  test_auto_commit.py  test_bidirectional_sync.py  test_cli_plan_from_issues.py  test_compliance.py  test_controller.py  test_docker_builder.py  test_git_utils.py  test_integration.py  test_issue_analyzer.py  test_issue_fetcher.py  test_notifications.py  test_parsers.py  test_plan_builder.py  test_runners.py  test_state.py  test_stream_parser.py  test_sync_github.py  test_sync_jira.py  test_ui_messages.py
tests/fixtures/: jira_responses.json  sample_master.md
(+94 files in other folders)
